# open-gov-crawlers

./: .gitignore  .pylintrc  .tool-versions  .travis.yml  CONTRIBUTING.md  Dockerfile  GEORGIA_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_PROGRESS_SUMMARY.md  README.md  US_State_Statute_Crawling_Plan.md  canada.json  glossary_spiders.yaml  main.py  original_parse_entries.txt  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  scrapinghub-requirements.txt  scrapinghub.yml  scrapy.cfg  setup.cfg  setup.py  test_spider_refactoring.py  test_validation.py
.cursor/rules/: match-over-if.mdc
.github/: FUNDING.yml
.github/workflows/: dependency-review.yml  mirror.yml  python-app.yml
.github/workflows-disabled/: python-app.yml
config/: datalinks.json
docs/: Glossary-source-todo-list.tsv  broken_spider_examples.py  parsing-worksheet.ipynb  spiders.md  tasks.md
oar/: items.py  parsers.py  pipelines.py  settings.py  text.py
oar/spiders/: secure_sos_state_or_us.py  us_ga_ag_opinions.py
public_law/: dates.py  exceptions.py  flipped.py  flow.py  glossary_metadata.py  html.py  items.py  lists.py  make_spider_table.py  metadata.py  middlewares.py  monitors.py  parsers.py  pipelines.py  result.py  selector_util.py  settings.py  test_util.py  text.py  validators.py
public_law/glossaries/: __init__.py
public_law/glossaries/models/: glossary.py
public_law/glossaries/parsers/: __init__.py
public_law/glossaries/spiders/: __init__.py
public_law/glossaries/utils/: metadata.py
public_law/items/: crs.py  oar.py
public_law/legal_texts/: __init__.py
public_law/legal_texts/models/: __init__.py  crs.py  statute.py
public_law/legal_texts/parsers/: __init__.py
public_law/legal_texts/spiders/: __init__.py
public_law/models/: glossary.py
public_law/nlp/: flesch_reading_ease.py
public_law/parsers/aus/: designip_glossary.py  dv_glossary.py  ip_glossary.py  law_handbook.py  lawhandbook_glossary.py
public_law/parsers/ca/: doj.py
public_law/parsers/can/: __init__.py  doj.py  doj_glossaries.py  parliamentary_glossary.py  patents_glossary.py
public_law/parsers/gbr/: cpr_glossary.py  fpr_glossary.py
public_law/parsers/int/: rome_statute.py
public_law/parsers/irl/: courts_glossary.py
public_law/parsers/nzl/: justice_glossary.py
public_law/parsers/us/: colorado.py  courts_glossary.py  georgia.py  oregon.py  uscourts_glossary.py
public_law/parsers/usa/: courts_glossary.py  criminal_glossary.py  georgia_ag_opinions.py  oregon_regs.py  us_courts_glossary.py  uscis_glossary.py
public_law/shared/: __init__.py
public_law/shared/exceptions/: __init__.py  parse_exception.py
public_law/shared/models/: __init__.py  metadata.py  result.py
public_law/shared/spiders/: base.py  enhanced_base.py  utils.py
public_law/shared/utils/: dates.py  html.py  seq.py  text.py
public_law/spiders/: base.py  config.py  declarative.py  enhanced_base.py  utils.py  yaml_loader.py
public_law/spiders/aus/: broken_spider_examples.py  designip_glossary.py  dv-glossary.py  dv_glossary.py  dv_glossary_auto.py  ip_glossary.py  law_handbook.py  (+1 more)
script/: create-crs-json  create-crs-xml-files-notes  crs-txt-to-sgml.py  run-glossary-spiders  submit-coverage  test-with-coverage
script/export/: -  LICENSE  README.md  shard.yml
scripts/: crs-txt-to-sgml.py
state-development/: DEVELOPMENT_COORDINATION.md  README.md  florida-task.md  georgia-task.md  utah-task.md  virginia-task.md  washington-task.md  wisconsin-task.md
test/: ga_parsers_test.py  oar_parsers_test.py  parsers_test.py
test/ca/: dog_glossaries_test.py  doj_glossaries_test.py
test/fixtures/: glos.html  index.html  legal-aid-glossary.html  opinion-2017-3.html  p11.html  www.justice.gc.ca_eng_rp-pr_cp-pm_eval_rep-rap_12_lap-paj_p7g.html
test/public_law/: dates_test.py  metadata_test.py  test_dates.py  text_test.py
test/us/: crs_parsers_test.py  oar_parsers_test.py
tests/fixtures/: Rome-Statute.html
tests/public_law/: dates_test.py  metadata_test.py  text_test.py
tests/spiders/: test_glossary_spiders.py
tmp/: empty-dir
tools/: check_test_names.py
tools/pylint_plugins/: __init__.py  test_naming.py
typings/devtools/: __init__.pyi  ansi.pyi  debug.pyi  prettier.pyi  timer.pyi  utils.pyi  version.pyi
typings/progressbar/: __about__.pyi  __init__.pyi  bar.pyi  base.pyi  shortcuts.pyi  utils.pyi  widgets.pyi
typings/pytest/: __init__.pyi
typings/pytz/: __init__.pyi  exceptions.pyi  lazy.pyi  reference.pyi  tzfile.pyi  tzinfo.pyi
typings/readability/: __init__.pyi  readability.pyi
typings/scrapy/: __init__.pyi  __main__.pyi  _monkeypatches.pyi  addons.pyi  cmdline.pyi  crawler.pyi  dupefilters.pyi  exceptions.pyi  exporters.pyi  extension.pyi  interfaces.pyi  item.pyi  link.pyi  logformatter.pyi  mail.pyi  middleware.pyi  pqueues.pyi  resolver.pyi  responsetypes.pyi  robotstxt.pyi  shell.pyi  signalmanager.pyi  signals.pyi  spiderloader.pyi  squeues.pyi  statscollectors.pyi
typings/textstat/: __init__.pyi  textstat.pyi
typings/tika/: __init__.pyi  config.pyi  detector.pyi  language.pyi  parser.pyi  tika.pyi  translate.pyi  unpack.pyi
typings/titlecase/: __init__.pyi  tests.pyi
typings/toolz/: __init__.pyi  _signatures.pyi  _version.pyi  compatibility.pyi  dicttoolz.pyi  functoolz.pyi  itertoolz.pyi  recipes.pyi  utils.pyi
typings/vcr/: __init__.pyi  _handle_coroutine.pyi  cassette.pyi  config.pyi  errors.pyi  filters.pyi  matchers.pyi  migration.pyi  patch.pyi  record_mode.pyi  request.pyi  serialize.pyi  util.pyi
(+354 files in other folders)
